# ultrarena

./: CMakeLists.txt  Makefile  README.md  TODO
src/: Game.cc  main.c  main.cc
src/events/: handle_event.c
src/include/: Game.hh  header.h
src/misc/: free_all.c  init.c
